# eventfd_vs

./: CMakeLists.txt  LICENSE  README.md  eventfd.cpp  eventfd.vcxproj
include/sys/: eventfd.h
